// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> create label 1`] = `
<span
  className="fd-label"
>
  Default
</span>
`;

exports[`<Label /> create label 2`] = `
<span
  className="fd-label fd-label--success blue"
>
  Default
</span>
`;
